home-view user stylowanie css

--- a/src/main/resources/static/sass/home-style.scss
+++ b/src/main/resources/static/sass/home-style.scss
@@ -15,6 +15,12 @@ nav {
     background-color: $white;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 
+    @media (min-width: 992px) {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 40px 0;
+    }
+
     .burger-btn {
         position: fixed;
         z-index: 3;
@@ -23,13 +29,53 @@ nav {
         background: none;
         color: $gold;
     }
+    @media (min-width: 992px) {
+        .burger-btn {
+            display: none;
+        }
+    }
     .exit-btn {
         display: none;
     }
 
     .menu {
+        @media (min-width: 992px) {
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            gap: 20px;
+        }
         &__item{
             display: none;
+        }
+        @media (min-width: 992px) {
+            &__item {
+                display: block;
+                font-size: 14px;
+                transition: color .4s;
+            }
+            &__item:hover {
+                color: $gold;
+            }
+            &__desktop {
+                display: flex;
+                justify-content: end;
+                align-items: center;
+                gap: 20px;
+                .profile {
+                    transition: color .4s;
+                }
+                .profile:hover {
+                    color: $gold;
+                }
+                .profile-icon {
+                    font-size: 25px;
+                    color: $dark-gray;
+                }
+            }
+            &__item:nth-child(6), &__item:nth-child(5) {
+                display: none;
+            }
         }
     }
     
@@ -92,6 +138,11 @@ main {
         flex-direction: column;
         justify-content: center;
         .graphic {
+            @media (min-width: 992px) {
+                .graphic {
+                    margin-bottom: -100px;
+                }
+            }
             &__image {
                 position: relative;
                 transform: translate(-50%, 0);
@@ -99,6 +150,26 @@ main {
                 left: 50%;
                 z-index: 0;
                 width: 200px;
+            }
+            &__image2, &__image3 {
+                display: none;
+            }
+            @media (min-width: 992px) {
+                &__image2, &__image3 {
+                    display: block;
+                    width: 250px; 
+                    position: relative;
+                } 
+                &__image2 {
+                    transform: translate(-50%, 0);
+                    top: 80px;
+                    left: 75%;
+                }
+                &__image3 {
+                    transform: translate(-50%, 0);
+                    top: -150px;
+                    left: 25%;
+                }
             }
         }
 
@@ -111,6 +182,14 @@ main {
             width: 150px;
             border-radius: 11px;
             animation: clickMe 1.5s ease-in-out infinite;
+        }
+        @media (min-width: 992px) {
+            &__btn {
+                margin: -230px auto 60px;
+                font-size: 20px;
+                width: 200px;
+                padding: 15px 18px;
+            }
         }
     }
     .plan-info {
@@ -125,8 +204,16 @@ main {
         .plan-info-wrapper {
             background-color: $light-gray;
             width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
             border-radius: 40px 0px;
             padding: 20px 40px;
+        }
+        @media (min-width: 992px) {
+            .plan-info-wrapper {
+                border-radius: 20px;
+                padding: 30px 40px;
+            }
         }
         &__header {
             font-size: 18px;
@@ -135,6 +222,12 @@ main {
             line-height: 25px;
             margin-bottom: 12px;
         }
+        @media (min-width: 992px) {
+            &__header {
+                font-size: 22px;
+                line-height: 30px
+            }
+        }
 
         &__text {
             margin-bottom: 20px;
@@ -144,10 +237,16 @@ main {
             line-height: 18px;
             color: $dark-gray;
         }
+        @media (min-width: 992px) {
+            .content {
+                font-size: 18px;
+                line-height: 25px;
+            }
+            
+        }
     }
 
     .about-us {
-
         &__header {
             margin: 80px 40px 20px;
             font-size: 18px;
@@ -155,10 +254,67 @@ main {
             font-weight: 500;
             text-align-last: left;
         }
+
+        @media (min-width: 992px) {
+            &__header {
+                text-align-last: center;
+                width: 400px;
+                margin: 180px auto 100px;
+                font-size: 22px;
+            }
+        }
+        @media (min-width: 992px) {
+            .element {
+                width: 50%;
+                flex-basis: 50%;
+            }
+            .element:nth-child(3) {
+                order: 1;
+            }
+            .element:nth-child(1),
+            .element:nth-child(2) {
+                margin-bottom: 40px;
+            }
+        }
+      
+        .recipes {
+            position: relative;
+            &__link {
+                position: absolute;
+                color: $white;
+                text-transform: uppercase;
+                font-size: 16px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-weight: 500;
+                letter-spacing: 1px;
+                text-shadow: 0px 4px 6.7px rgba(0, 0, 0, 0.50);
+                z-index: 1;
+                transition: font-size .4s;
+                border-radius: 15px;
+            }
+
+            &__link:active {
+                font-size: 20px;
+            }
+            @media (min-width: 992px) {
+                &__link:active {
+                    font-size: 16px;
+                }
+                &__link:hover {
+                    font-size: 25px;
+                    border-radius: 15px;
+                }
+            }
+            
+        }
         &__image {
             width: 100%;
             border-radius: 15px;
-            margin-bottom: 40px;
+            filter: brightness(80%);
         }
         &__wrapper {
             padding: 20px 40px;
@@ -166,12 +322,24 @@ main {
             flex-direction: column;
         }
 
-        &__text {
-            margin-bottom: 20px;
+        @media (min-width: 992px) {
+            &__wrapper {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: space-around;
+            }
+            .about-us__text-content {
+                padding: 0 50px;
+            }
         }
 
+        &__text {
+            margin: 40px 0 20px;
+        }
         &__ps {
-            margin-bottom: 80px;
+            margin-bottom: 40px;
         }
 
         .content {
@@ -179,13 +347,24 @@ main {
             color: $gold;
             font-size: 13px;
             line-height: 18px;
-            
+        }
+        @media (min-width: 992px) {
+            .content {
+                font-size: 18px;
+                line-height: 25px;
+            }
         }
     }
 }
 
 .test-content {
     display: none;
+}
+
+@media (min-width: 992px) {
+    footer {
+        margin-top: 100px;
+    }
 }
 
 .footer {
@@ -199,7 +378,7 @@ main {
     background-color: $white;
     box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
     padding: 22px 16px 0;
-
+    margin-top: 40px;
     &__section {
         font-family: 'Now', sans-serif;
         color: $dark-gray;
@@ -232,6 +411,12 @@ main {
         font-size: 15px;
         font-weight: 500;
         margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 1400px; 
     }
 }
 
