--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,4 +1,4 @@
-.container--md {
+.container {
   margin: 0 auto;
   width: 100%;
   max-width: 600px;
@@ -75,6 +75,13 @@ nav {
   background-color: #FFFFFF;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
+@media (min-width: 992px) {
+  nav {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 40px 0;
+  }
+}
 nav .burger-btn {
   position: fixed;
   z-index: 3;
@@ -83,11 +90,53 @@ nav .burger-btn {
   background: none;
   color: #FFB342;
 }
+@media (min-width: 992px) {
+  nav .burger-btn {
+    display: none;
+  }
+}
 nav .exit-btn {
   display: none;
 }
+@media (min-width: 992px) {
+  nav .menu {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
+  }
+}
 nav .menu__item {
   display: none;
+}
+@media (min-width: 992px) {
+  nav .menu__item {
+    display: block;
+    font-size: 14px;
+    transition: color 0.4s;
+  }
+  nav .menu__item:hover {
+    color: #FFB342;
+  }
+  nav .menu__desktop {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+  }
+  nav .menu__desktop .profile {
+    transition: color 0.4s;
+  }
+  nav .menu__desktop .profile:hover {
+    color: #FFB342;
+  }
+  nav .menu__desktop .profile-icon {
+    font-size: 25px;
+    color: #767676;
+  }
+  nav .menu__item:nth-child(6), nav .menu__item:nth-child(5) {
+    display: none;
+  }
 }
 nav .active {
   position: fixed;
@@ -143,6 +192,11 @@ main .plan-generator {
   flex-direction: column;
   justify-content: center;
 }
+@media (min-width: 992px) {
+  main .plan-generator .graphic .graphic {
+    margin-bottom: -100px;
+  }
+}
 main .plan-generator .graphic__image {
   position: relative;
   transform: translate(-50%, 0);
@@ -150,6 +204,26 @@ main .plan-generator .graphic__image {
   left: 50%;
   z-index: 0;
   width: 200px;
+}
+main .plan-generator .graphic__image2, main .plan-generator .graphic__image3 {
+  display: none;
+}
+@media (min-width: 992px) {
+  main .plan-generator .graphic__image2, main .plan-generator .graphic__image3 {
+    display: block;
+    width: 250px;
+    position: relative;
+  }
+  main .plan-generator .graphic__image2 {
+    transform: translate(-50%, 0);
+    top: 80px;
+    left: 75%;
+  }
+  main .plan-generator .graphic__image3 {
+    transform: translate(-50%, 0);
+    top: -150px;
+    left: 25%;
+  }
 }
 main .plan-generator__btn {
   margin: 190px auto 30px;
@@ -160,6 +234,14 @@ main .plan-generator__btn {
   width: 150px;
   border-radius: 11px;
   animation: clickMe 1.5s ease-in-out infinite;
+}
+@media (min-width: 992px) {
+  main .plan-generator__btn {
+    margin: -230px auto 60px;
+    font-size: 20px;
+    width: 200px;
+    padding: 15px 18px;
+  }
 }
 main .plan-info {
   display: flex;
@@ -174,8 +256,16 @@ main .plan-info__image {
 main .plan-info .plan-info-wrapper {
   background-color: #F3F3F3;
   width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
   border-radius: 40px 0px;
   padding: 20px 40px;
+}
+@media (min-width: 992px) {
+  main .plan-info .plan-info-wrapper {
+    border-radius: 20px;
+    padding: 30px 40px;
+  }
 }
 main .plan-info__header {
   font-size: 18px;
@@ -183,6 +273,12 @@ main .plan-info__header {
   font-weight: 500;
   line-height: 25px;
   margin-bottom: 12px;
+}
+@media (min-width: 992px) {
+  main .plan-info__header {
+    font-size: 22px;
+    line-height: 30px;
+  }
 }
 main .plan-info__text {
   margin-bottom: 20px;
@@ -192,6 +288,12 @@ main .plan-info .content {
   line-height: 18px;
   color: #767676;
 }
+@media (min-width: 992px) {
+  main .plan-info .content {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
 main .about-us__header {
   margin: 80px 40px 20px;
   font-size: 18px;
@@ -200,21 +302,87 @@ main .about-us__header {
   -moz-text-align-last: left;
        text-align-last: left;
 }
+@media (min-width: 992px) {
+  main .about-us__header {
+    -moz-text-align-last: center;
+         text-align-last: center;
+    width: 400px;
+    margin: 180px auto 100px;
+    font-size: 22px;
+  }
+}
+@media (min-width: 992px) {
+  main .about-us .element {
+    width: 50%;
+    flex-basis: 50%;
+  }
+  main .about-us .element:nth-child(3) {
+    order: 1;
+  }
+  main .about-us .element:nth-child(1),
+  main .about-us .element:nth-child(2) {
+    margin-bottom: 40px;
+  }
+}
+main .about-us .recipes {
+  position: relative;
+}
+main .about-us .recipes__link {
+  position: absolute;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-shadow: 0px 4px 6.7px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  transition: font-size 0.4s;
+  border-radius: 15px;
+}
+main .about-us .recipes__link:active {
+  font-size: 20px;
+}
+@media (min-width: 992px) {
+  main .about-us .recipes__link:active {
+    font-size: 16px;
+  }
+  main .about-us .recipes__link:hover {
+    font-size: 25px;
+    border-radius: 15px;
+  }
+}
 main .about-us__image {
   width: 100%;
   border-radius: 15px;
-  margin-bottom: 40px;
+  filter: brightness(80%);
 }
 main .about-us__wrapper {
   padding: 20px 40px;
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 992px) {
+  main .about-us__wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+  }
+  main .about-us .about-us__text-content {
+    padding: 0 50px;
+  }
+}
 main .about-us__text {
-  margin-bottom: 20px;
+  margin: 40px 0 20px;
 }
 main .about-us__ps {
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 main .about-us .content {
   display: block;
@@ -222,11 +390,22 @@ main .about-us .content {
   font-size: 13px;
   line-height: 18px;
 }
+@media (min-width: 992px) {
+  main .about-us .content {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
 
 .test-content {
   display: none;
 }
 
+@media (min-width: 992px) {
+  footer {
+    margin-top: 100px;
+  }
+}
 .footer {
   height: 117px;
   width: 100vw;
@@ -238,6 +417,7 @@ main .about-us .content {
   background-color: #FFFFFF;
   box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
   padding: 22px 16px 0;
+  margin-top: 40px;
 }
 .footer__section {
   font-family: "Now", sans-serif;
@@ -268,4 +448,10 @@ main .about-us .content {
   font-size: 15px;
   font-weight: 500;
   margin-bottom: 10px;
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 1400px;
+  }
 }/*# sourceMappingURL=home-style.css.map */
