--- a/src/main/resources/static/sass/__variables.scss
+++ b/src/main/resources/static/sass/__variables.scss
@@ -7,12 +7,8 @@ $orange: #FF7F37;
 $black: #000000;
 $green: #B1CE00;
 
-$breakpoints: (
-    'sm': 767px,
-    'md': 992px
-);
 
-.container--md{
+.container {
     margin: 0 auto;
     width: 100%;
     max-width: 600px; 
