--- a/src/main/resources/templates/plangenerator/plan-info.html
+++ b/src/main/resources/templates/plangenerator/plan-info.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Meal Planner</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script th:src="@{'/js/plan-info.js'}"></script>
+    <script th:src="@{'/js/plan-preferences.js'}"></script>
+    <script th:src="@{'/js/plan-weekInfo.js'}"></script>
 </head>
 <body>
 <nav>
@@ -22,10 +23,7 @@
 </nav>
 <br /><br />
 <div>
-    <div>
-        <h1> Plan Generator </h1>
-        <p th:text="${plan}"></p>
-    </div>
+    <h1> Plan Generator </h1>
 </div>
 <div>
     <div th:if="${param.error}">
@@ -55,7 +53,7 @@
                             <input type="text" th:field="*{preferences.productsToUse[__${idU.index}__].unit}" placeholder="Unit">
                         </div>
                     </div>
-                    <button type="button" class="add-productU">Dodaj kolejny składnik</button>
+                    <button type="button" class="add-productU">Dodaj składnik</button>
                 </div>
 
                 <div>
@@ -65,23 +63,23 @@
                             <input type="text" th:field="*{preferences.dislikedProducts[__${idD.index}__].name}" placeholder="Name">
                         </div>
                     </div>
-                    <button type="button" class="add-productD">Dodaj kolejny składnik</button>
+                    <button type="button" class="add-productD">Dodaj składnik</button>
                 </div>
             </div>
             <br><br>
             <div>
                 <h2>WeekInfo:</h2>
-                <!--                        <div>-->
-                <!--                            <label>WeekInfo</label>-->
-                <!--                            <select id="eatingStatus" name="selectedStatus" th:field="*{weekInfo.dayInfoList[0].eatingPlan.status}">-->
-                <!--                                <option th:each="s : ${eatingStatuses}" th:value="${s}" th:text="${s}"></option>-->
-                <!--                            </select>-->
-                <!--                            <div>-->
-                <!--                                <input type="text" id="day" th:field="*{weekInfo.dayInfoList[0].day}" placeholder="Dzień"/>-->
-                <!--                                <input type="text" id="amount" th:field="*{weekInfo.dayInfoList[0].eatingPlan}" placeholder="Ilość"/>-->
-                <!--                                <input type="text" id="unit" th:field="*{preferences.productsToUse[0].unit}" placeholder="Jednostka"/>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
+                <div>
+                    <label>Wybierz dzień rozpoczęcia planu: </label>
+                    <input type="date" id="startDate" name="startDate" th:field="*{weekInfo.dayInfoList[0].day}" required>
+                    <div th:each="days, idDay : *{weekInfo.dayInfoList}">
+                        <div class="days" id="days-__${idDay.index}__"></div>
+                    </div>
+                    <div>
+                        <button type="button" id="addNextDay">Dodaj plan na kolejny dzień</button>
+                        <button type="button" id="removeLastDay">Usuń ostatni dzień</button>
+                    </div>
+                </div>
             </div>
             <div>
                 <button type="submit">Zatwierdź</button>
