--- a/css/home-guest-style.css
+++ b/css/home-guest-style.css
@@ -51,17 +51,6 @@ table {
   border-spacing: 0;
 }
 
-@keyframes clickMe {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 nav {
   width: 100%;
   height: 73px;
@@ -184,119 +173,111 @@ nav.active .exit-btn {
   background: none;
 }
 
+.footer {
+  width: 100vw;
+  height: 117px;
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  gap: 20px;
+  padding: 22px 16px 0;
+  margin-top: 40px;
+  background-color: #FFFFFF;
+  box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
+}
+.footer__section {
+  font-family: "Now", sans-serif;
+  color: #767676;
+}
+.footer__section .email {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  font-size: 15px;
+}
+.footer__section .email__text {
+  font-size: 11px;
+  font-weight: 400;
+}
+@media (min-width: 992px) {
+  .footer__section .email__text {
+    font-size: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .footer__section .email {
+    font-size: 20px;
+  }
+  .footer__section .footer__header {
+    font-size: 20px;
+  }
+}
+.footer__section .social-media__links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 5px;
+}
+.footer__section .social-media__link {
+  font-size: 22px;
+  color: #FFB342;
+}
+@media (min-width: 992px) {
+  .footer__section .social-media__link {
+    font-size: 30px;
+    transition: color 0.4s;
+  }
+  .footer__section .social-media__link:hover {
+    color: #FF7F37;
+  }
+}
+.footer__header {
+  margin-bottom: 10px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+@media (min-width: 992px) {
+  .footer {
+    height: 170px;
+    padding-top: 40px;
+    margin-top: 100px;
+  }
+}
+nav .active .menu__item:nth-child(3) {
+  order: 1;
+  width: auto;
+  padding: 16px 30px;
+  margin-top: 40px;
+  border: 1px solid #FFB342;
+  border-radius: 5px;
+}
+nav .active .menu__item:nth-child(1) {
+  color: #FFB342;
+}
+nav .active .menu__item:nth-child(2) {
+  color: #767676;
+}
+nav .active .menu__item:nth-child(4) {
+  width: 100vw;
+  padding: 28px 0;
+  font-size: 14px;
+  border: 1px solid #F3F3F3;
+  margin: 0;
+}
+
+@media (min-width: 992px) {
+  .menu__item:nth-child(3), .menu__item:nth-child(4) {
+    display: none;
+  }
+}
 main {
   width: 100vw;
   font-family: "Now", sans-serif;
 }
-main .plan-generator {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-@media (min-width: 992px) {
-  main .plan-generator .graphic .graphic {
-    margin-bottom: -100px;
-  }
-}
-main .plan-generator .graphic__image {
-  width: 200px;
-  position: relative;
-  top: 150px;
-  left: 50%;
-  z-index: 0;
-  transform: translate(-50%, 0);
-}
-main .plan-generator .graphic__image2, main .plan-generator .graphic__image3 {
-  display: none;
-}
-@media (min-width: 992px) {
-  main .plan-generator .graphic__image2, main .plan-generator .graphic__image3 {
-    width: 250px;
-    display: block;
-    position: relative;
-  }
-  main .plan-generator .graphic__image2 {
-    top: 80px;
-    left: 75%;
-    transform: translate(-50%, 0);
-  }
-  main .plan-generator .graphic__image3 {
-    top: -150px;
-    left: 25%;
-    transform: translate(-50%, 0);
-  }
-}
-main .plan-generator__btn {
-  width: 150px;
-  padding: 9px 18px;
-  margin: 190px auto 30px;
-  font-size: 14px;
-  color: #FFFFFF;
-  background-color: #FFB342;
-  border-radius: 11px;
-  animation: clickMe 1.5s ease-in-out infinite;
-}
-@media (min-width: 992px) {
-  main .plan-generator__btn {
-    width: 200px;
-    padding: 15px 18px;
-    margin: -230px auto 60px;
-    font-size: 20px;
-  }
-}
-main .plan-info {
-  display: flex;
-  flex-direction: column;
-}
-main .plan-info__image {
-  width: 80px;
-  position: relative;
-  top: 5px;
-  margin: 0 auto;
-}
-main .plan-info .plan-info-wrapper {
-  width: 100%;
-  max-width: 600px;
-  padding: 20px 40px;
-  margin: 0 auto;
-  background-color: #F3F3F3;
-  border-radius: 40px 0px;
-}
-@media (min-width: 992px) {
-  main .plan-info .plan-info-wrapper {
-    padding: 30px 40px;
-    border-radius: 20px;
-  }
-}
-main .plan-info__header {
-  margin-bottom: 12px;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 25px;
-  color: #FFB342;
-}
-@media (min-width: 992px) {
-  main .plan-info__header {
-    font-size: 22px;
-    line-height: 30px;
-  }
-}
-main .plan-info__text {
-  margin-bottom: 20px;
-}
-main .plan-info .content {
-  font-size: 13px;
-  line-height: 18px;
-  color: #767676;
-}
-@media (min-width: 992px) {
-  main .plan-info .content {
-    font-size: 18px;
-    line-height: 25px;
-  }
-}
 main .about-us__header {
-  margin: 80px 40px 20px;
+  margin: 140px 40px 20px;
   font-size: 18px;
   font-weight: 500;
   color: #767676;
@@ -306,7 +287,7 @@ main .about-us__header {
 @media (min-width: 992px) {
   main .about-us__header {
     width: 400px;
-    margin: 180px auto 100px;
+    margin: 220px auto 100px;
     font-size: 22px;
     -moz-text-align-last: center;
          text-align-last: center;
@@ -402,80 +383,8 @@ main .about-us .content {
   display: none;
 }
 
-.footer {
-  width: 100vw;
-  height: 117px;
-  display: flex;
-  justify-content: space-around;
-  align-items: start;
-  gap: 20px;
-  padding: 22px 16px 0;
-  margin-top: 40px;
-  background-color: #FFFFFF;
-  box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
-}
-.footer__section {
-  font-family: "Now", sans-serif;
-  color: #767676;
-}
-.footer__section .email {
-  display: flex;
-  align-items: center;
-  gap: 7px;
-  font-size: 15px;
-}
-.footer__section .email__text {
-  font-size: 11px;
-  font-weight: 400;
-}
-@media (min-width: 992px) {
-  .footer__section .email__text {
-    font-size: 15px;
-  }
-}
-@media (min-width: 992px) {
-  .footer__section .email {
-    font-size: 20px;
-  }
-  .footer__section .footer__header {
-    font-size: 20px;
-  }
-}
-.footer__section .social-media__links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  margin-top: 5px;
-}
-.footer__section .social-media__link {
-  font-size: 22px;
-  color: #FFB342;
-}
-@media (min-width: 992px) {
-  .footer__section .social-media__link {
-    font-size: 30px;
-    transition: color 0.4s;
-  }
-  .footer__section .social-media__link:hover {
-    color: #FF7F37;
-  }
-}
-.footer__header {
-  margin-bottom: 10px;
-  font-size: 15px;
-  font-weight: 500;
-}
-
-@media (min-width: 992px) {
-  .footer {
-    height: 170px;
-    padding-top: 40px;
-    margin-top: 100px;
-  }
-}
 @media (min-width: 992px) {
   .container {
     max-width: 1400px;
   }
-}/*# sourceMappingURL=home-style.css.map */
+}/*# sourceMappingURL=home-guest-style.css.map */
