--- a/src/main/resources/static/sass/home-user-style.scss
+++ b/src/main/resources/static/sass/home-user-style.scss
@@ -1,134 +1,8 @@
 @import './_variables';
 @import './_reset';
 @import './__animations.scss';
-
-nav {
-    font-family: 'Now', sans-serif;
-    width: 100%;
-    height: 73px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    z-index: 4;
-    background-color: $white;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-
-    @media (min-width: 992px) {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 0 40px 0;
-    }
-
-    .burger-btn {
-        position: fixed;
-        z-index: 3;
-        right: 14px;
-        font-size: 46px;
-        background: none;
-        color: $gold;
-    }
-    @media (min-width: 992px) {
-        .burger-btn {
-            display: none;
-        }
-    }
-    .exit-btn {
-        display: none;
-    }
-
-    .menu {
-        @media (min-width: 992px) {
-            display: flex;
-            align-items: center;
-            justify-content: start;
-            gap: 20px;
-        }
-        &__item{
-            display: none;
-        }
-        @media (min-width: 992px) {
-            &__item {
-                display: block;
-                font-size: 14px;
-                transition: color .4s;
-            }
-            &__item:hover {
-                color: $gold;
-            }
-            &__desktop {
-                display: flex;
-                justify-content: end;
-                align-items: center;
-                gap: 20px;
-                .profile {
-                    transition: color .4s;
-                }
-                .profile:hover {
-                    color: $gold;
-                }
-                .profile-icon {
-                    font-size: 25px;
-                    color: $dark-gray;
-                }
-            }
-            &__item:nth-child(6), &__item:nth-child(5) {
-                display: none;
-            }
-        }
-    }
-    
-    .active {
-        position: fixed;
-        top: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: $white;
-        color: $dark-gray;
-        height: 100vh;
-        width: 100vw;
-        .menu__item {
-        display: block;
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 14px;
-        border: 1px solid $light-gray;
-        padding: 28px 0;
-        width: 100vw;
-        }
-        .menu__item:nth-child(2){
-            color: $gold;
-        }
-        .menu__item:last-child {
-            padding: 16px 30px;
-            width: auto;
-            border: 1px solid $gold;
-            border-radius: 5px;
-            margin-top: 40px;
-        }
-
-    }
-}
-
-nav.active {
-
-    .burger-btn {
-        display: none;
-    }
-
-    .exit-btn {
-        display: block;
-        position: fixed;
-        z-index: 3;
-        right: 14px;
-        font-size: 46px;
-        background: none;
-        color: $dark-gray;
-    }
-}
+@import './_navigation';
+@import './_footer';
 
 main {
     width: 100vw;
@@ -144,51 +18,50 @@ main {
                 }
             }
             &__image {
+                width: 200px;
                 position: relative;
-                transform: translate(-50%, 0);
                 top: 150px;
                 left: 50%;
                 z-index: 0;
-                width: 200px;
+                transform: translate(-50%, 0);
             }
             &__image2, &__image3 {
                 display: none;
             }
             @media (min-width: 992px) {
                 &__image2, &__image3 {
-                    display: block;
                     width: 250px; 
+                    display: block;
                     position: relative;
                 } 
                 &__image2 {
-                    transform: translate(-50%, 0);
                     top: 80px;
                     left: 75%;
+                    transform: translate(-50%, 0);
                 }
                 &__image3 {
-                    transform: translate(-50%, 0);
                     top: -150px;
                     left: 25%;
+                    transform: translate(-50%, 0);
                 }
             }
         }
-
         &__btn {
+            width: 150px;
+            padding: 9px 18px;
             margin: 190px auto 30px;
+            font-size: 14px;
             color: $white;
             background-color: $gold;
-            padding: 9px 18px;
-            font-size: 14px;
-            width: 150px;
             border-radius: 11px;
             animation: clickMe 1.5s ease-in-out infinite;
         }
         @media (min-width: 992px) {
             &__btn {
-                margin: -230px auto 60px;
-                font-size: 20px;
                 width: 200px;
                 padding: 15px 18px;
+                margin: -230px auto 60px;
+                font-size: 20px;
             }
         }
     }
@@ -196,31 +69,31 @@ main {
         display: flex;
         flex-direction: column;
         &__image {
+            width: 80px;
             position: relative;
             top: 5px;
-            width: 80px;
             margin: 0 auto;
         }
         .plan-info-wrapper {
-            background-color: $light-gray;
             width: 100%;
             max-width: 600px;
-            margin: 0 auto;
-            border-radius: 40px 0px;
             padding: 20px 40px;
+            margin: 0 auto;
+            background-color: $light-gray;
+            border-radius: 40px 0px;
         }
         @media (min-width: 992px) {
             .plan-info-wrapper {
-                border-radius: 20px;
                 padding: 30px 40px;
+                border-radius: 20px;
             }
         }
         &__header {
+            margin-bottom: 12px;
             font-size: 18px;
-            color: $gold;
             font-weight: 500;
             line-height: 25px;
-            margin-bottom: 12px;
+            color: $gold;
         }
         @media (min-width: 992px) {
             &__header {
@@ -228,7 +101,6 @@ main {
                 line-height: 30px
             }
         }
-
         &__text {
             margin-bottom: 20px;
         }
@@ -242,25 +114,22 @@ main {
                 font-size: 18px;
                 line-height: 25px;
             }
-            
         }
     }
-
     .about-us {
         &__header {
             margin: 80px 40px 20px;
             font-size: 18px;
-            color: $dark-gray;
             font-weight: 500;
+            color: $dark-gray;
             text-align-last: left;
         }
-
         @media (min-width: 992px) {
             &__header {
-                text-align-last: center;
                 width: 400px;
                 margin: 180px auto 100px;
                 font-size: 22px;
+                text-align-last: center;
             }
         }
         @media (min-width: 992px) {
@@ -276,27 +145,25 @@ main {
                 margin-bottom: 40px;
             }
         }
-      
         .recipes {
             position: relative;
             &__link {
-                position: absolute;
-                color: $white;
-                text-transform: uppercase;
-                font-size: 16px;
                 width: 100%;
                 height: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                position: absolute;
+                z-index: 1;
+                font-size: 16px;
                 font-weight: 500;
                 letter-spacing: 1px;
+                text-transform: uppercase;
                 text-shadow: 0px 4px 6.7px rgba(0, 0, 0, 0.50);
-                z-index: 1;
-                transition: font-size .4s;
+                color: $white;
                 border-radius: 15px;
+                transition: font-size .4s;
             }
-
             &__link:active {
                 font-size: 20px;
             }
@@ -309,7 +176,6 @@ main {
                     border-radius: 15px;
                 }
             }
-            
         }
         &__image {
             width: 100%;
@@ -317,36 +183,33 @@ main {
             filter: brightness(80%);
         }
         &__wrapper {
-            padding: 20px 40px;
             display: flex;
             flex-direction: column;
+            padding: 20px 40px;
         }
-
         @media (min-width: 992px) {
             &__wrapper {
                 display: flex;
                 flex-direction: row;
-                flex-wrap: wrap;
                 align-items: center;
                 justify-content: space-around;
+                flex-wrap: wrap;
             }
             .about-us__text-content {
                 padding: 0 50px;
             }
         }
-
         &__text {
             margin: 40px 0 20px;
         }
         &__ps {
             margin-bottom: 40px;
         }
-
         .content {
             display: block;
-            color: $gold;
             font-size: 13px;
             line-height: 18px;
+            color: $gold;
         }
         @media (min-width: 992px) {
             .content {
@@ -357,61 +220,9 @@ main {
     }
 }
 
+//Do usunięcia!
 .test-content {
     display: none;
-}
-
-@media (min-width: 992px) {
-    footer {
-        margin-top: 100px;
-    }
-}
-
-.footer {
-    height: 117px;
-    width: 100vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: start;
-    align-self: flex-end;
-    gap: 20px;
-    background-color: $white;
-    box-shadow: 0px -4px 25.2px 0px rgba(0, 0, 0, 0.25);
-    padding: 22px 16px 0;
-    margin-top: 40px;
-    &__section {
-        font-family: 'Now', sans-serif;
-        color: $dark-gray;
-        .email {
-            font-size: 16px;
-            display: flex;
-            align-items: center;
-            gap: 7px;
-            &__text {
-                font-size: 11px;
-                font-weight: 400;
-            }
-        }
-
-        .social-media__links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            align-items: center;
-            margin-top: 5px;
-        }
-
-        .social-media__link {
-            font-size: 22px;
-            color: $gold;
-        }
-    }
-
-    &__header {
-        font-size: 15px;
-        font-weight: 500;
-        margin-bottom: 10px;
-    }
 }
 
 @media (min-width: 992px) {
