--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -6,11 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MealPlanner</title>
-
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
-    <link rel="stylesheet" href="../../../../../css/home-style.css">
-
-    <script src="https://kit.fontawesome.com/3d3eb47a80.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../../../../../css/home-user-style.css">
 </head>
 
 <body>
@@ -21,7 +18,6 @@
         <button class="exit-btn">
             <i class="fa-solid fa-xmark"></i>
         </button>
-
         <div class="menu">
             <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
             <a class="menu__item" th:href="@{/plan/info}">Wygeneruj plan</a>
@@ -29,19 +25,13 @@
             <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
             <a class="menu__item" th:href="@{'/user/' + ${userId}}">Twój profil</a>
             <a class="menu__item" th:href="@{/logout}">Wyloguj się</a>
-
-
         </div>
         <div class="menu__desktop">
             <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
             <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${userId}}"><i
                     class="fa-solid fa-user"></i></a>
         </div>
-
-
-
     </nav>
-
     <main>
         <section class="plan-generator">
             <div class="graphic">
@@ -55,7 +45,6 @@
                 <a class="plan-generator__link" th:href="@{/plan/info}">Wygeneruj plan!</a>
             </button>
         </section>
-
         <section class="plan-info container">
             <img class="plan-info__image" src="../../static/images/triangle.svg"
                 alt="trójkąt - od dymku z informacjami">
@@ -70,7 +59,6 @@
                     Nie zwlekaj i sprawdź co dla Ciebie przygotowaliśmy. </p>
             </div>
         </section>
-
         <section class="about-us container">
             <h2 class="about-us__header">Co znajdziesz na naszej stronie?</h2>
             <div class="about-us__wrapper">
@@ -91,22 +79,20 @@
                 </div>
                 <div class="recipes element">
                     <a class="recipes__link" href="#">Wyszukaj przepis</a>
-                    <img class="about-us__image" src="../../static/images/keram.jpg" alt="kurkuma i pomarańcze">
+                    <img class="about-us__image" src="../../static/images/keram.jpg" alt="warzywa">
                 </div>
                 <div class="about-us__text-content element">
                     <p class="content about-us__text">Skorzystaj też z naszej specjalnej wyszukiwarki przepisów i
                         wyszukaj
                         przepis, który Cię interesuje. Co więcej, w wyszukiwarce czekają na Ciebie losowo wybrane
-                        przepis
+                        przepisy
                         dla złamania kulinarnej rutyny
                     </p>
                     <p class="content about-us__ps">Daj się zaskoczyć lub wyszukaj coś dla siebie!</p>
                 </div>
             </div>
-
         </section>
     </main>
-
     <div class="test-content">
         <div>
             <h1> Meal Planner </h1>
@@ -114,7 +100,6 @@
             <p> Role: <span sec:authentication="principal.authorities"></span> </p>
         </div>
     </div>
-
     <footer class="footer">
         <div class="footer__section contact">
             <h4 class="footer__header">Kontakt</h4>
