--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -7,6 +7,8 @@
 <h1>Profil użytkownika</h1>
 <p>Login: <span th:text="${username}"></span></p>
 <p>Role: <span th:text="${role}"></span></p>
+
+<a th:href="@{/change-email}">Edytuj profil</a>
 <!-- Inne pola użytkownika, jeśli są -->
 </body>
 </html>
