--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -49,7 +49,7 @@
         </div>
         <div>
             <a th:href="@{/plan/info}">Wygeneruj plan</a>
-            <a th:href="@{'/user/' + ${userId}}">Twój profl</a>
+            <a th:href="@{'/user/' + ${username}}">Twój profl</a>
             <a th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
         </div>
     </div>
