--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -4,16 +4,18 @@
     <title>User Details</title>
 </head>
 <body>
-<h1>Profil użytkownika</h1>
+<h1>Profil użytkownika : </h1>
 <p>Login: <span th:text="${username}"></span></p>
 <p>Role: <span th:text="${role}"></span></p>
 
-<a th:href="@{/change-email}">Edytuj profil</a>
+<form method="get" th:action="@{/user/{username}/change-profil(username=${username})}">
+    <button type="submit">Dodaj do ulubionych</button>
+</form>
 
 <h2>Ulubione przepisy</h2>
 <ul>
     <li th:each="recipe : ${favorites}">
-        <span th:text="${recipe.name}">Nazwa przepisu</span>
+        <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.name}"></a>
     </li>
 </ul>
 
