zmaina sassa na cssa

--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MealPlanner</title>
     <link href="https://fonts.cdnfonts.com/css/now" rel="stylesheet">
-    <link rel="stylesheet" href="../../../../../css/home-guest-style.css">
+    <link rel="stylesheet" href="../../static/css/home-guest-style.css">
 </head>
 
 <body>
