--- a/src/main/resources/static/css/__navigation.css
+++ b/src/main/resources/static/css/__navigation.css
@@ -8,7 +8,7 @@ nav {
     top: 0;
     z-index: 4;
     font-family: "Now", sans-serif;
-    background-color: #FFFFFF;
+    background-color: var(--white);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   }
   @media (min-width: 992px) {
@@ -25,7 +25,7 @@ nav {
     z-index: 3;
     font-size: 46px;
     background: none;
-    color: #FFB342;
+    color: var(--gold);
   }
   @media (min-width: 992px) {
     nav .burger-btn {
@@ -53,7 +53,7 @@ nav {
       transition: color 0.4s;
     }
     nav .menu__item:hover {
-      color: #FFB342;
+      color: var(--gold);
     }
     nav .menu__desktop {
       display: flex;
@@ -65,11 +65,11 @@ nav {
       transition: color 0.4s;
     }
     nav .menu__desktop .profile:hover {
-      color: #FFB342;
+      color: var(--gold);
     }
     nav .menu__desktop .profile-icon {
       font-size: 28px;
-      color: #767676;
+      color: var(--dark-gray);
     }
     nav .menu__item:nth-child(6), nav .menu__item:nth-child(5) {
       display: none;
@@ -84,8 +84,8 @@ nav {
     justify-content: center;
     position: fixed;
     top: 0;
-    color: #767676;
-    background-color: #FFFFFF;
+    color: var(--dark-gray);
+    background-color: var(--white);
   }
   nav .active .menu__item {
     width: 100vw;
@@ -94,16 +94,16 @@ nav {
     padding: 28px 0;
     font-size: 14px;
     text-transform: uppercase;
-    border: 1px solid #F3F3F3;
+    border: 1px solid var(--light-gray);
   }
   nav .active .menu__item:nth-child(2) {
-    color: #FFB342;
+    color: var(--gold);
   }
   nav .active .menu__item:last-child {
     width: auto;
     padding: 16px 30px;
     margin-top: 40px;
-    border: 1px solid #FFB342;
+    border: 1px solid var(--gold);
     border-radius: 5px;
   }
   
@@ -116,6 +116,6 @@ nav {
     right: 14px;
     z-index: 3;
     font-size: 46px;
-    color: #767676;
+    color: var(--dark-gray);
     background: none;
   }
