--- a/src/main/resources/static/css/home-guest-style.css
+++ b/src/main/resources/static/css/home-guest-style.css
@@ -8,20 +8,20 @@ nav .active .menu__item:nth-child(3) {
     width: auto;
     padding: 16px 30px;
     margin-top: 40px;
-    border: 1px solid #FFB342;
+    border: 1px solid var(--gold);
     border-radius: 5px;
   }
   nav .active .menu__item:nth-child(1) {
-    color: #FFB342;
+    color: var(--gold);
   }
   nav .active .menu__item:nth-child(2) {
-    color: #767676;
+    color: var(--dark-gray);
   }
   nav .active .menu__item:nth-child(4) {
     width: 100vw;
     padding: 28px 0;
     font-size: 14px;
-    border: 1px solid #F3F3F3;
+    border: 1px solid var(--light-gray);
     margin: 0;
   }
   
@@ -38,7 +38,7 @@ nav .active .menu__item:nth-child(3) {
     margin: 140px 40px 20px;
     font-size: 18px;
     font-weight: 500;
-    color: #767676;
+    color: var(--dark-gray);
     -moz-text-align-last: left;
          text-align-last: left;
   }
@@ -80,7 +80,7 @@ nav .active .menu__item:nth-child(3) {
     letter-spacing: 1px;
     text-transform: uppercase;
     text-shadow: 0px 4px 6.7px rgba(0, 0, 0, 0.5);
-    color: #FFFFFF;
+    color: var(--white);
     border-radius: 15px;
     transition: font-size 0.4s;
   }
@@ -128,7 +128,7 @@ nav .active .menu__item:nth-child(3) {
     display: block;
     font-size: 13px;
     line-height: 18px;
-    color: #FFB342;
+    color: var(--gold);
   }
   @media (min-width: 992px) {
     main .about-us .content {
